--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aloha/twilio",
+    "name": "twilio/aloha-id-pal",
     "description": "Twilio API for Laravel",
     "type": "library",
     "keywords": ["sms", "ivr", "laravel", "twilio"],
@@ -13,17 +13,17 @@
             "email": "vandevreken.hannes@gmail.com"
         }
     ],
-    "homepage":"https://github.com/aloha/laravel-twilio",
+    "homepage":"https://github.com/valeriy-motornyy-idpal/laravel-twilio",
     "license": "MIT",
     "require": {
-        "php": ">=7.2.0",
-        "twilio/sdk": "^6.0"
+        "php": "^8.0",
+        "twilio/sdk": "^6.19"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
-        "illuminate/console": "~6||~7||~8",
-        "illuminate/support": "~6||~7||~8",
-        "phpunit/phpunit": "^8.0"
+        "illuminate/console": "^8",
+        "illuminate/support": "^8",
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
